cpp-glteapot/errors.txt
g++ -Wall -g -c main.cpp -o main.o
main.cpp: In function ‘void drawText(const char*, float, float)’:
main.cpp:38:23: warning: comparison of integer expressions of different signedness: ‘int’ and ‘size_t’ {aka ‘long unsigned int’} [-Wsign-compare]
   38 |     for (int i = 0; i < strlen(text); i++) {
      |                     ~~^~~~~~~~~~~~~~
main.cpp: In function ‘void display()’:
main.cpp:62:52: error: taking address of temporary array
   62 |     glMaterialfv(GL_FRONT, GL_SPECULAR, (GLfloat[]){0.0, 0.0, 0.0, 1.0});
      |                                                    ^~~~~~~~~~~~~~~~~~~~
main.cpp:63:53: error: taking address of temporary array
   63 |     glMaterialfv(GL_FRONT, GL_SHININESS, (GLfloat[]){0.0});
      |                                                     ^~~~~
main.cpp:74:52: error: taking address of temporary array
   74 |     glMaterialfv(GL_FRONT, GL_SPECULAR, (GLfloat[]){0.5, 0.5, 0.5, 1.0});
      |                                                    ^~~~~~~~~~~~~~~~~~~~
main.cpp:75:53: error: taking address of temporary array
   75 |     glMaterialfv(GL_FRONT, GL_SHININESS, (GLfloat[]){30.0});
      |                                                     ^~~~~~
make: *** [Makefile:28: main.o] Error 1
